--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Pylint
         run: |
           # Ignore import errors to avoid requiring heavy runtime deps on CI
-          pylint --disable=import-error --rcfile=.pylintrc src/open_r1 || (echo "pylint found issues" && exit 1)
+          pylint --disable=import-error --rcfile=.pylintrc src || (echo "pylint found issues" && exit 1)
 
       - name: Pytest
         env:
@@ -56,7 +56,6 @@ jobs:
       - name: Install docs deps
         run: |
           python -m pip install --upgrade pip
-          pip install -e .
           pip install -r docs/requirements.txt
 
       - name: Build docs
