--- a/.pylintrc
+++ b/.pylintrc
@@ -24,5 +24,5 @@ max-line-length=100
 score=yes
 
 [MESSAGES CONTROL]
-enable=all
-
+# Keep errors, warnings, and fatals; skip convention/refactor noise
+disable=C,R
