--- a/.condarc
+++ b/.condarc
@@ -2,4 +2,9 @@ channels:
   - conda-forge
   - pytorch
   - nvidia
+pkgs_dirs:
+  - ./.conda_pkgs
+envs_dirs:
+  - ./.conda_envs
+cache_dir: ./.conda_cache
 auto_activate_base: false
