--- a/.pip/pip.conf
+++ b/.pip/pip.conf
@@ -1,2 +1,10 @@
 [global]
+# Keep cache under the repository
 cache-dir = ./.pip_cache
+disable-pip-version-check = true
+no-python-version-warning = true
+timeout = 60
+
+[install]
+# Avoid noisy PATH warnings when installing console_scripts locally
+no-warn-script-location = true
