--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,13 +21,12 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install pytest
+      - name: Install test dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install pytest requests
 
       - name: Run tests
         env:
           PYTHONPATH: ./src
         run: pytest -q
-
