--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,6 @@
 sphinx>=7.2
-sphinx-rtd-theme>=1.3
+furo>=2024.1.29
+pydata-sphinx-theme>=0.15.0
+myst-parser>=2.0.0
+sphinx-copybutton>=0.5.2
+sphinx-design>=0.6.0
