--- a/recipes/Llama3.1-8B-instruct/grpo/config_math.yaml
+++ b/recipes/Llama3.1-8B-instruct/grpo/config_math.yaml
@@ -47,6 +47,7 @@ system_prompt: "You are an expert *mathematics problem-solver*.\n\nEvery time yo
   </think>\n<answer>\nTHEANSWER\n</answer>\n"
 bf16: true
 use_vllm: true
+vllm_mode: colocate
 do_eval: false
 per_device_train_batch_size: 2
 per_device_eval_batch_size: 2
