--- a/recipes/Qwen2.5-1.5B-Instruct/grpo/config_math.yaml
+++ b/recipes/Qwen2.5-1.5B-Instruct/grpo/config_math.yaml
@@ -60,6 +60,7 @@ system_prompt: "You are an expert *mathematics problem-solver*.
 # GRPO trainer config
 bf16: true
 use_vllm: true
+vllm_mode: colocate
 do_eval: false
 gradient_accumulation_steps: 64
 gradient_checkpointing: true
