--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install docs dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -e .[docs]
           pip install -r docs/requirements.txt
 
       - name: Build Sphinx HTML
