--- a/configs/recipes/Qwen2.5-1.5B-Instruct/grpo/config_math.yaml
+++ b/configs/recipes/Qwen2.5-1.5B-Instruct/grpo/config_math.yaml
@@ -62,7 +62,7 @@ system_prompt: "You are an expert *mathematics problem-solver*.
   </answer>
   "
 # GRPO trainer config
-bf16: true
+bf16: false
 use_vllm: true
 vllm_mode: colocate
 do_eval: true
