--- a/configs/recipes/Qwen2.5-1.5B-Instruct/grpo/config_math.yaml
+++ b/configs/recipes/Qwen2.5-1.5B-Instruct/grpo/config_math.yaml
@@ -65,7 +65,7 @@ system_prompt: "You are an expert *mathematics problem-solver*.
 bf16: false
 fp16: true
 use_vllm: true
-vllm_mode: colocate
+vllm_mode: server         # reuse the single vLLM server launched by the script
 vllm_gpu_memory_utilization: 0.5
 do_eval: true
 gradient_accumulation_steps: 64
