--- a/configs/recipes/Qwen2.5-1.5B-Instruct/maxent-grpo/config_math.yaml
+++ b/configs/recipes/Qwen2.5-1.5B-Instruct/maxent-grpo/config_math.yaml
@@ -78,7 +78,7 @@ maxent_tau_warmup_steps: 200    # roughly match LR warmup so tau stays steady ea
 maxent_use_clip_objective: true
 maxent_clip_objective_coef: 1.0
 maxent_clip_adv_baseline: 0.125   # 1/num_generations (8) for a gentler clip objective
-train_grpo_objective: false
+train_grpo_objective: true
 
 # Training/eval & logging
 bf16: false
@@ -86,9 +86,9 @@ fp16: true
 use_vllm: true
 vllm_mode: server         # reuse the single vLLM server from the launcher; avoids spawning 6 colocated engines
 vllm_return_logprobs: true
-vllm_gpu_memory_utilization: 0.7
+vllm_gpu_memory_utilization: 0.9
 do_eval: true
-gradient_accumulation_steps: 128    # match TRL defaults for faster logging feedback
+gradient_accumulation_steps: 30    # match TRL defaults for faster logging feedback
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
@@ -114,7 +114,7 @@ logging_steps: 1
 logging_strategy: steps
 lr_scheduler_type: cosine
 max_prompt_length: 2500      # trim prompt window to ease ref scoring memory
-max_completion_length: 800   # shorter completions to reduce activation + ref costs
+max_completion_length: 450   # shorter completions to reduce activation + ref costs
 max_steps: 320
 # GRPO requires >=2 generations to compute advantages; keep this at 2+ even when reducing memory.
 num_generations: 4          # reduce scoring footprint while satisfying GRPO minimum
