--- a/configs/recipes/Qwen2.5-1.5B-Instruct/infoseed/config_math.yaml
+++ b/configs/recipes/Qwen2.5-1.5B-Instruct/infoseed/config_math.yaml
@@ -26,7 +26,6 @@ eval_dataset_name: HuggingFaceH4/MATH-500
 eval_dataset_split: test
 eval_dataset_prompt_column: problem
 eval_dataset_solution_column: answer
-disable_distributed_sampler: true
 system_prompt: |
   You are an expert *mathematics problem-solver*.
 
@@ -43,6 +42,9 @@ system_prompt: |
     – The final answer goes inside `<answer>` **only**.  
     – Use **exact** math (fractions, radicals, π, e). Avoid unnecessary decimals.  
     – Canonical forms: integers as plain numbers; reduced fractions a/b with b>0; simplified radicals; rationalized denominators; sets/tuples with standard notation; intervals in standard notation.  
+    – If there is **no solution**, write `NO SOLUTION`. If the problem is **underdetermined**, write `I DON'T KNOW`.
+
+  • You have a hard cap of **750 output tokens**. Be concise but complete.
 
   ------------------------------------------------------------
   TAG TEMPLATE (copy this shape for every problem)
@@ -60,55 +62,28 @@ system_prompt: |
   THEANSWER
   </answer>
 
-# MaxEnt‑GRPO specific knobs (used by src/maxent_grpo/maxent_grpo.py)
-# Enable MaxEnt weighting (set train_grpo_objective=false) with a modest tau and adaptive entropy target.
-maxent_tau: 0.0001
-maxent_q_temperature: 0.9       # soften/sharpen listwise q if rewards are flat/noisy
-maxent_q_epsilon: 1.0e-6        # epsilon floor on q for full support
-maxent_length_normalize_ref: true
-maxent_logprob_chunk_size: 0  # finer chunking for ref scoring to trim peak memory
-maxent_target_weight_entropy: 0.42  # ~70% of log(4) to keep weights spread but not uniform
-maxent_tau_lr: 0.001
-maxent_tau_min: 0.0001
-maxent_tau_max: 1
-maxent_tau_warmup_steps: 75    # roughly match LR warmup so tau stays steady early on
-maxent_use_clip_objective: true
-maxent_clip_objective_coef: 1.0
-maxent_clip_adv_baseline: 0.25   # 1/num_generations (4) for a gentler clip objective
-train_grpo_objective: true
-
-# InfoSeed (optional; defaults keep it off)
-info_seed_enabled: false
-info_seed_num_seeds: 0
-info_seed_lambda: 0.0
-info_seed_alpha_entropy: 0.0
+# InfoSeed knobs (enabled)
+info_seed_enabled: true
+info_seed_num_seeds: 4
+info_seed_lambda: 0.01
+info_seed_alpha_entropy: 0.5
 info_seed_prompt_template: "\n[seed={seed}]"
 info_seed_loss_type: infonce
 info_seed_pooling: mean
+info_seed_temperature: 0.3
 
-# Training/eval & logging
-bf16: true
-fp16: false
+# GRPO trainer config (InfoSeed uses GRPO objective)
+bf16: false
+fp16: true
 use_vllm: true
-vllm_mode: server         # reuse the single vLLM server from the launcher; avoids spawning 6 colocated engines
-vllm_return_logprobs: true
+vllm_mode: server
 vllm_gpu_memory_utilization: 0.9
 do_eval: true
-gradient_accumulation_steps: 64    # match TRL defaults for faster logging feedback
+gradient_accumulation_steps: 64
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
-gen_temperature: 0.7
-gen_top_p: 0.8
-gen_top_k: 32
-gen_best_of: 1
-vllm_stop_sequences:
-  - "</answer>"
-  - "</answer>\n"
-  - "</assistant>"
-vllm_request_timeout: 600
-vllm_url: http://localhost:29525/generate
-hub_model_id: od2961/Qwen2.5-1.5B-Open-R1-MaxEnt-GRPO-BASELINE-math-v1
+hub_model_id: od2961/Qwen2.5-1.5B-Open-R1-InfoSeed-math-v1
 hub_strategy: every_save
 learning_rate: 5e-6
 adam_beta2: 0.99
@@ -119,35 +94,30 @@ logging_first_step: true
 logging_steps: 1
 logging_strategy: steps
 lr_scheduler_type: cosine
-max_prompt_length: 2500      # trim prompt window to ease ref scoring memory
-max_completion_length: 750   # shorter completions to reduce activation + ref costs
-max_steps: 1000
-# GRPO requires >=2 generations to compute advantages; keep this at 2+ even when reducing memory.
-num_generations: 4          # reduce scoring footprint while satisfying GRPO minimum
-num_train_epochs: 5
-output_dir: var/data/Qwen2.5-1.5B-Open-R1-MaxEnt-GRPO-BASELINE-math-v1
+max_prompt_length: 1400
+max_completion_length: 600
+max_steps: -1
+num_generations: 4
+num_train_epochs: 3
+output_dir: var/data/Qwen2.5-1.5B-Open-R1-InfoSeed-math-v1
 overwrite_output_dir: true
 per_device_eval_batch_size: 8
-per_device_train_batch_size: 1
+per_device_train_batch_size: 8
 push_to_hub: true
 report_to:
 - wandb
-wandb_project: huggingface
-wandb_entity: ogd3-princeton-university
 reward_funcs:
 - pure_accuracy_math
 reward_weights:
 - 1
-
-# Reverse‑KL weight β used inside MaxEnt update
-init_kl_coeff: 1.00
 kl_target:        0.07
-kl_horizon:       5000 
-kl_ctl_step_size: 0.25
-
-# Misc GRPO‑style knobs (not all consumed by the minimal script, kept for consistency)
+init_kl_coeff:    3.00
+kl_horizon:       50000
+kl_ctl_step_size: 0.15
 max_grad_norm: 0.15
-clip_range: 0.05
+vf_coef: 0.25
+advantage_normalization: running 
+horizon: 1024      
 save_strategy: steps
 save_steps: 50
 evaluation_strategy: steps
@@ -155,3 +125,12 @@ eval_steps: 25
 save_total_limit: 1000
 seed: 42
 warmup_ratio: 0.2
+reward_normalization: true
+gamma: 0.99
+gae_lambda: 0.95
+log_grad_norm_after_clip: true
+log_kl_per_token: true    
+reward_clip: [-6.0, 6.0]          
+advantage_clip: [-2.5, 2.5]       
+clip_range:     0.05
+clip_range_vf:  0.5
