--- a/configs/pytest.ini
+++ b/configs/pytest.ini
@@ -1,6 +1,17 @@
 [pytest]
 cache_dir = ../var/pytest_cache
 testpaths = tests
+norecursedirs =
+    var
+    tmp
+    .git
+    .venv
+    .local
+    .cache
+    build
+    dist
+    site-packages
+    pip-build-env-*
 filterwarnings =
     ignore::DeprecationWarning
 markers =
