--- a/configs/recipes/Qwen2.5-1.5B-Instruct/infoseed/config_math.yaml
+++ b/configs/recipes/Qwen2.5-1.5B-Instruct/infoseed/config_math.yaml
@@ -86,6 +86,7 @@ fp16: true
 use_vllm: true
 vllm_mode: server
 vllm_gpu_memory_utilization: 0.9
+vllm_sync_interval_steps: 10  # sync weights every N optimizer steps when enabled (0 disables)
 do_eval: true
 gradient_accumulation_steps: 64
 gradient_checkpointing: true
@@ -111,6 +112,11 @@ output_dir: var/data/Qwen2.5-1.5B-Open-R1-InfoSeed-math-v1
 overwrite_output_dir: true
 per_device_eval_batch_size: 8
 per_device_train_batch_size: 8
+# DataLoader throughput knobs (custom loop + baseline)
+dataloader_num_workers: 4
+dataloader_pin_memory: true
+dataloader_prefetch_factor: 2
+dataloader_persistent_workers: true
 push_to_hub: true
 report_to:
 - wandb
