--- a/configs/pyrightconfig.json
+++ b/configs/pyrightconfig.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://raw.githubusercontent.com/microsoft/pyright/main/packages/pyright-internal/schemas/pyrightconfig.schema.json",
-  "include": ["../src", "../tests"],
+  "include": ["../src"],
+  "exclude": ["../tests"],
   "typeCheckingMode": "basic",
   "reportMissingImports": "warning",
   "reportMissingTypeStubs": "warning",
