--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,130 @@
 [build-system]
 requires = ["setuptools>=65", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "open-r1"
+version = "0.1.0.dev0"
+description = "Open R1"
+readme = "README.md"
+requires-python = ">=3.10.9"
+license = {file = "LICENSE"}
+authors = [
+  {name = "The Hugging Face team (past and future)", email = "lewis@huggingface.co"},
+]
+keywords = ["llm", "inference-time", "compute", "reasoning"]
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Intended Audience :: Developers",
+  "Intended Audience :: Education",
+  "Intended Audience :: Science/Research",
+  "License :: OSI Approved :: Apache Software License",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.10",
+  "Topic :: Scientific/Engineering :: Artificial Intelligence",
+]
+
+dependencies = [
+  "accelerate==1.4.0",
+  "bitsandbytes>=0.43.0",
+  "einops>=0.8.0",
+  "datasets>=3.2.0",
+  "deepspeed==0.16.8",
+  "hf_transfer>=0.1.4",
+  "huggingface-hub[cli,hf_xet]>=0.30.2,<1.0",
+  "langdetect",
+  "liger-kernel>=0.5.10",
+  "numpy>=1.26.4",
+  "packaging>=23.0",
+  "safetensors>=0.3.3",
+  "sentencepiece>=0.1.99",
+  "transformers==4.53.0",
+  "trl[vllm]==0.18.0",
+  "wandb>=0.19.1",
+  "async-lru>=2.0.5",
+  "typer>=0.12.5",
+  "omegaconf>=2.3.0",
+  "hydra-core>=1.3.2",
+]
+
+[project.optional-dependencies]
+tests = [
+  "pytest",
+  "parameterized>=0.9.0",
+  "jieba",
+]
+torch = [
+  "torch==2.8.0",
+]
+quality = [
+  "ruff>=0.9.0",
+  "isort>=5.12.0",
+  "flake8>=6.0.0",
+  "pylint>=3.2.0",
+  "pyright==1.1.381",
+  "pre-commit>=3.8.0",
+]
+docs = [
+  "sphinx>=7.2",
+  "sphinx-rtd-theme>=1.3",
+  "myst-parser",
+  "sphinx-copybutton",
+  "sphinx-design",
+  "linkify-it-py",
+  "mdurl",
+]
+code = [
+  "e2b-code-interpreter>=1.0.5",
+  "python-dotenv",
+  "morphcloud==0.1.67",
+  "jieba",
+  "pandas>=2.2.3",
+  "aiofiles>=24.1.0",
+]
+eval = [
+  "lighteval @ git+https://github.com/huggingface/lighteval.git@d3da6b9bbf38104c8b5e1acc86f83541f9a502d1",
+]
+dev = [
+  "ruff>=0.9.0",
+  "isort>=5.12.0",
+  "flake8>=6.0.0",
+  "pylint>=3.2.0",
+  "pyright==1.1.381",
+  "pre-commit>=3.8.0",
+  "pytest",
+  "parameterized>=0.9.0",
+  "jieba",
+  "lighteval @ git+https://github.com/huggingface/lighteval.git@d3da6b9bbf38104c8b5e1acc86f83541f9a502d1",
+  "e2b-code-interpreter>=1.0.5",
+  "python-dotenv",
+  "morphcloud==0.1.67",
+  "pandas>=2.2.3",
+  "aiofiles>=24.1.0",
+  "sphinx>=7.2",
+  "sphinx-rtd-theme>=1.3",
+  "myst-parser",
+  "sphinx-copybutton",
+  "sphinx-design",
+  "linkify-it-py",
+  "mdurl",
+]
+
+[project.scripts]
+maxent-grpo = "maxent_grpo.cli.hydra_cli:hydra_entry"
+maxent-grpo-baseline = "maxent_grpo.cli.hydra_cli:baseline_entry"
+maxent-grpo-maxent = "maxent_grpo.cli.hydra_cli:maxent_entry"
+maxent-grpo-infoseed = "maxent_grpo.cli.hydra_cli:infoseed_entry"
+maxent-grpo-generate = "maxent_grpo.cli.hydra_cli:generate_entry"
+maxent-grpo-inference = "maxent_grpo.cli.hydra_cli:inference_entry"
+maxent-grpo-math-eval = "maxent_grpo.cli.hydra_cli:math_eval_entry"
+
+[project.urls]
+Homepage = "https://github.com/huggingface/open-r1"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+zip-safe = false
+
+[tool.setuptools.packages.find]
+where = ["src"]
