--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -41,4 +41,4 @@ jobs:
         env:
           PYTHONPATH: ./src
           MAXENT_DISTRIBUTED_STUBS: ${{ matrix.mode == 'stubbed' && '1' || '0' }}
-        run: pytest -q --cov=src --cov-report=term-missing --cov-report=xml -c configs/pytest.ini
+        run: pytest -q --cov=src --cov-report=term-missing --cov-report=xml -c pytest.ini
